// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notifications /> correctly handles the loading/disabled state 1`] = `
<div>
  <div
    class="mx_NotificationSettings2"
  >
    <div
      class="mx_SettingsSection"
    >
      <div
        class="mx_SettingsSection_subSections"
      >
        <div
          class="mx_SettingsSubsection_content mx_NotificationSettings2_flags"
        >
          <div
            class="mx_SettingsFlag"
          >
            <span
              class="mx_SettingsFlag_label"
            >
              <div
                id="mx_LabelledToggleSwitch_:r17:"
              >
                Enable notifications for this account
              </div>
            </span>
            <div
              aria-checked="true"
              aria-disabled="true"
              aria-labelledby="mx_LabelledToggleSwitch_:r17:"
              class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_on"
              role="switch"
              tabindex="0"
            >
              <div
                class="mx_ToggleSwitch_ball"
              />
            </div>
          </div>
          <div
            class="mx_SettingsFlag"
          >
            <span
              class="mx_SettingsFlag_label"
            >
              <div
                id="mx_LabelledToggleSwitch_:r18:"
              >
                Enable desktop notifications for this session
              </div>
            </span>
            <div
              aria-checked="false"
              aria-disabled="false"
              aria-labelledby="mx_LabelledToggleSwitch_:r18:"
              class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_enabled"
              role="switch"
              tabindex="0"
            >
              <div
                class="mx_ToggleSwitch_ball"
              />
            </div>
          </div>
          <div
            class="mx_SettingsFlag"
          >
            <span
              class="mx_SettingsFlag_label"
            >
              <div
                id="mx_LabelledToggleSwitch_:r19:"
              >
                Show message preview in desktop notification
              </div>
            </span>
            <div
              aria-checked="false"
              aria-disabled="false"
              aria-labelledby="mx_LabelledToggleSwitch_:r19:"
              class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_enabled"
              role="switch"
              tabindex="0"
            >
              <div
                class="mx_ToggleSwitch_ball"
              />
            </div>
          </div>
          <div
            class="mx_SettingsFlag"
          >
            <span
              class="mx_SettingsFlag_label"
            >
              <div
                id="mx_LabelledToggleSwitch_:r1a:"
              >
                Enable audible notifications for this session
              </div>
            </span>
            <div
              aria-checked="true"
              aria-disabled="false"
              aria-labelledby="mx_LabelledToggleSwitch_:r1a:"
              class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_on mx_ToggleSwitch_enabled"
              role="switch"
              tabindex="0"
            >
              <div
                class="mx_ToggleSwitch_ball"
              />
            </div>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              I want to be notified for (Default Setting)
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_description"
          >
            <div
              class="mx_SettingsSubsection_text"
            >
              This setting will be applied by default to all your rooms.
            </div>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <label
              class="mx_StyledRadioButton mx_StyledRadioButton_disabled mx_StyledRadioButton_checked"
            >
              <input
                checked=""
                disabled=""
                id="defaultNotificationLevel-all_messages"
                name="defaultNotificationLevel"
                type="radio"
                value="all_messages"
              />
              <div>
                <div />
              </div>
              <div
                class="mx_StyledRadioButton_content"
              >
                All messages
              </div>
              <div
                class="mx_StyledRadioButton_spacer"
              />
            </label>
            <label
              class="mx_StyledRadioButton mx_StyledRadioButton_disabled"
            >
              <input
                disabled=""
                id="defaultNotificationLevel-people_mentions_keywords"
                name="defaultNotificationLevel"
                type="radio"
                value="people_mentions_keywords"
              />
              <div>
                <div />
              </div>
              <div
                class="mx_StyledRadioButton_content"
              >
                People, Mentions and Keywords
              </div>
              <div
                class="mx_StyledRadioButton_spacer"
              />
            </label>
            <label
              class="mx_StyledRadioButton mx_StyledRadioButton_disabled"
            >
              <input
                disabled=""
                id="defaultNotificationLevel-mentions_keywords"
                name="defaultNotificationLevel"
                type="radio"
                value="mentions_keywords"
              />
              <div>
                <div />
              </div>
              <div
                class="mx_StyledRadioButton_content"
              >
                Mentions and Keywords only
              </div>
              <div
                class="mx_StyledRadioButton_spacer"
              />
            </label>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              Play a sound for
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_description"
          >
            <div
              class="mx_SettingsSubsection_text"
            >
              Applied by default to all rooms on all devices.
            </div>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        disabled=""
                        id="checkbox_vY7Q4uEh9K"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_vY7Q4uEh9K"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        People
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        disabled=""
                        id="checkbox_38QgU2Pomx"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_38QgU2Pomx"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Mentions and Keywords
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        disabled=""
                        id="checkbox_wKpa6hpi3Y"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_wKpa6hpi3Y"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Audio and Video calls
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              Other things we think you might be interested in:
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        disabled=""
                        id="checkbox_EetmBG4yVC"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_EetmBG4yVC"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Invited to a room
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        class="_input_1hel1_18"
                        disabled=""
                        id="checkbox_eEefiPqpMR"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_eEefiPqpMR"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        New room activity, upgrades and status messages occur
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        disabled=""
                        id="checkbox_MwbPDmfGtm"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_MwbPDmfGtm"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Messages sent by bots
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              Mentions and Keywords
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_description"
          >
            <div
              class="mx_SettingsSubsection_text"
            >
              <span>
                Show a badge 
                <div
                  class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_notification mx_NotificationBadge_2char cpd-theme-light"
                >
                  <span
                    class="mx_NotificationBadge_count"
                  >
                    1
                  </span>
                </div>
                 when keywords are used in a room.
              </span>
            </div>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        disabled=""
                        id="checkbox_GQvdMWe954"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_GQvdMWe954"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Notify when someone mentions using @room
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        disabled=""
                        id="checkbox_DVIAu5CsiH"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_DVIAu5CsiH"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Notify when someone mentions using @displayname or @userId:matrix.org
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        aria-describedby=":r24:"
                        checked=""
                        class="_input_1hel1_18"
                        disabled=""
                        id="checkbox_RD7nyrA2oh"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_RD7nyrA2oh"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Notify when someone uses a keyword
                      </span>
                    </label>
                    <span
                      class="_message_19upo_85 _help-message_19upo_91"
                      id=":r24:"
                    >
                      Enter keywords here, or use for spelling variations or nicknames
                    </span>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_TagComposer mx_TagComposer_disabled"
            >
              <form
                class="mx_TagComposer_input"
              >
                <div
                  class="mx_Field mx_Field_input"
                >
                  <input
                    autocomplete="off"
                    disabled=""
                    id="mx_NotificationSettings2_Keywords_field"
                    label="Keyword"
                    placeholder="New keyword"
                    type="text"
                    value=""
                  />
                  <label
                    for="mx_NotificationSettings2_Keywords_field"
                  >
                    Keyword
                  </label>
                </div>
                <div
                  aria-disabled="true"
                  class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary mx_AccessibleButton_disabled"
                  disabled=""
                  role="button"
                  tabindex="0"
                >
                  Add
                </div>
              </form>
              <div
                class="mx_TagComposer_tags"
                role="list"
              />
            </div>
            <div
              class="mx_SettingsFlag"
            >
              <label
                class="mx_SettingsFlag_label"
                for="mx_SettingsFlag_jWVJIPauy1Om"
              >
                <span
                  class="mx_SettingsFlag_labelText"
                >
                  Show all activity in the room list (dots or number of unread messages)
                </span>
              </label>
              <div
                aria-checked="true"
                aria-disabled="false"
                aria-label="Show all activity in the room list (dots or number of unread messages)"
                class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_on mx_ToggleSwitch_enabled"
                id="mx_SettingsFlag_jWVJIPauy1Om"
                role="switch"
                tabindex="0"
              >
                <div
                  class="mx_ToggleSwitch_ball"
                />
              </div>
            </div>
            <div
              class="mx_SettingsFlag"
            >
              <label
                class="mx_SettingsFlag_label"
                for="mx_SettingsFlag_nTidX4ePDS0O"
              >
                <span
                  class="mx_SettingsFlag_labelText"
                >
                  Only show notifications in the thread activity centre
                </span>
              </label>
              <div
                aria-checked="true"
                aria-disabled="false"
                aria-label="Only show notifications in the thread activity centre"
                class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_on mx_ToggleSwitch_enabled"
                id="mx_SettingsFlag_nTidX4ePDS0O"
                role="switch"
                tabindex="0"
              >
                <div
                  class="mx_ToggleSwitch_ball"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              Email summary
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <div
              class="mx_SettingsSubsection_text"
            >
              Receive an email summary of missed notifications
            </div>
            <div
              class="mx_SettingsSubsection_description mx_NotificationPusherSettings_detail"
            >
              <div
                class="mx_SettingsSubsection_text"
              >
                <span>
                  Select which emails you want to send summaries to. Manage your emails in 
                  <div
                    class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
                    role="button"
                    tabindex="0"
                  >
                    General
                  </div>
                  .
                </span>
              </div>
            </div>
            <div
              class="mx_SettingsIndent"
            />
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              Quick Actions
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <div
              aria-disabled="true"
              class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_outline mx_AccessibleButton_disabled"
              disabled=""
              role="button"
              tabindex="0"
            >
              Reset to default settings
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Notifications /> matches the snapshot 1`] = `
<div>
  <div
    class="mx_NotificationSettings2"
  >
    <div
      class="mx_SettingsSection"
    >
      <div
        class="mx_SettingsSection_subSections"
      >
        <div
          class="mx_SettingsSubsection_content mx_NotificationSettings2_flags"
        >
          <div
            class="mx_SettingsFlag"
          >
            <span
              class="mx_SettingsFlag_label"
            >
              <div
                id="mx_LabelledToggleSwitch_:r0:"
              >
                Enable notifications for this account
              </div>
            </span>
            <div
              aria-checked="true"
              aria-disabled="false"
              aria-labelledby="mx_LabelledToggleSwitch_:r0:"
              class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_on mx_ToggleSwitch_enabled"
              role="switch"
              tabindex="0"
            >
              <div
                class="mx_ToggleSwitch_ball"
              />
            </div>
          </div>
          <div
            class="mx_SettingsFlag"
          >
            <span
              class="mx_SettingsFlag_label"
            >
              <div
                id="mx_LabelledToggleSwitch_:r1:"
              >
                Enable desktop notifications for this session
              </div>
            </span>
            <div
              aria-checked="false"
              aria-disabled="false"
              aria-labelledby="mx_LabelledToggleSwitch_:r1:"
              class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_enabled"
              role="switch"
              tabindex="0"
            >
              <div
                class="mx_ToggleSwitch_ball"
              />
            </div>
          </div>
          <div
            class="mx_SettingsFlag"
          >
            <span
              class="mx_SettingsFlag_label"
            >
              <div
                id="mx_LabelledToggleSwitch_:r2:"
              >
                Show message preview in desktop notification
              </div>
            </span>
            <div
              aria-checked="false"
              aria-disabled="false"
              aria-labelledby="mx_LabelledToggleSwitch_:r2:"
              class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_enabled"
              role="switch"
              tabindex="0"
            >
              <div
                class="mx_ToggleSwitch_ball"
              />
            </div>
          </div>
          <div
            class="mx_SettingsFlag"
          >
            <span
              class="mx_SettingsFlag_label"
            >
              <div
                id="mx_LabelledToggleSwitch_:r3:"
              >
                Enable audible notifications for this session
              </div>
            </span>
            <div
              aria-checked="true"
              aria-disabled="false"
              aria-labelledby="mx_LabelledToggleSwitch_:r3:"
              class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_on mx_ToggleSwitch_enabled"
              role="switch"
              tabindex="0"
            >
              <div
                class="mx_ToggleSwitch_ball"
              />
            </div>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              I want to be notified for (Default Setting)
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_description"
          >
            <div
              class="mx_SettingsSubsection_text"
            >
              This setting will be applied by default to all your rooms.
            </div>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <label
              class="mx_StyledRadioButton mx_StyledRadioButton_enabled"
            >
              <input
                checked=""
                id="defaultNotificationLevel-all_messages"
                name="defaultNotificationLevel"
                type="radio"
                value="all_messages"
              />
              <div>
                <div />
              </div>
              <div
                class="mx_StyledRadioButton_content"
              >
                All messages
              </div>
              <div
                class="mx_StyledRadioButton_spacer"
              />
            </label>
            <label
              class="mx_StyledRadioButton mx_StyledRadioButton_enabled mx_StyledRadioButton_checked"
            >
              <input
                id="defaultNotificationLevel-people_mentions_keywords"
                name="defaultNotificationLevel"
                type="radio"
                value="people_mentions_keywords"
              />
              <div>
                <div />
              </div>
              <div
                class="mx_StyledRadioButton_content"
              >
                People, Mentions and Keywords
              </div>
              <div
                class="mx_StyledRadioButton_spacer"
              />
            </label>
            <label
              class="mx_StyledRadioButton mx_StyledRadioButton_enabled"
            >
              <input
                id="defaultNotificationLevel-mentions_keywords"
                name="defaultNotificationLevel"
                type="radio"
                value="mentions_keywords"
              />
              <div>
                <div />
              </div>
              <div
                class="mx_StyledRadioButton_content"
              >
                Mentions and Keywords only
              </div>
              <div
                class="mx_StyledRadioButton_spacer"
              />
            </label>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              Play a sound for
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_description"
          >
            <div
              class="mx_SettingsSubsection_text"
            >
              Applied by default to all rooms on all devices.
            </div>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        id="checkbox_pWwAHG75JN"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_pWwAHG75JN"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        People
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        id="checkbox_TNkNU64raT"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_TNkNU64raT"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Mentions and Keywords
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        id="checkbox_LcRsQRlYy7"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_LcRsQRlYy7"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Audio and Video calls
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              Other things we think you might be interested in:
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        id="checkbox_5nfv5bOEPN"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_5nfv5bOEPN"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Invited to a room
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        class="_input_1hel1_18"
                        id="checkbox_1su1JYVtOy"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_1su1JYVtOy"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        New room activity, upgrades and status messages occur
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        id="checkbox_R5kbu3pEwu"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_R5kbu3pEwu"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Messages sent by bots
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              Mentions and Keywords
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_description"
          >
            <div
              class="mx_SettingsSubsection_text"
            >
              <span>
                Show a badge 
                <div
                  class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_notification mx_NotificationBadge_2char cpd-theme-light"
                >
                  <span
                    class="mx_NotificationBadge_count"
                  >
                    1
                  </span>
                </div>
                 when keywords are used in a room.
              </span>
            </div>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        id="checkbox_Ln9EnnYuxf"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_Ln9EnnYuxf"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Notify when someone mentions using @room
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        checked=""
                        class="_input_1hel1_18"
                        id="checkbox_FEpOsztWhQ"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_FEpOsztWhQ"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Notify when someone mentions using @displayname or @userId:matrix.org
                      </span>
                    </label>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_LabelledCheckbox"
            >
              <form
                class="_root_19upo_16"
              >
                <div
                  class="_inline-field_19upo_32"
                >
                  <div
                    class="_inline-field-control_19upo_44"
                  >
                    <div
                      class="_container_1hel1_10"
                    >
                      <input
                        aria-describedby=":rt:"
                        checked=""
                        class="_input_1hel1_18"
                        id="checkbox_kBerF1ejc4"
                        type="checkbox"
                      />
                      <div
                        class="_ui_1hel1_19"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_inline-field-body_19upo_38"
                  >
                    <label
                      class="_label_19upo_59"
                      for="checkbox_kBerF1ejc4"
                    >
                      <span
                        class="mx_LabelledCheckbox_label"
                      >
                        Notify when someone uses a keyword
                      </span>
                    </label>
                    <span
                      class="_message_19upo_85 _help-message_19upo_91"
                      id=":rt:"
                    >
                      Enter keywords here, or use for spelling variations or nicknames
                    </span>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="mx_TagComposer"
            >
              <form
                class="mx_TagComposer_input"
              >
                <div
                  class="mx_Field mx_Field_input"
                >
                  <input
                    autocomplete="off"
                    id="mx_NotificationSettings2_Keywords_field"
                    label="Keyword"
                    placeholder="New keyword"
                    type="text"
                    value=""
                  />
                  <label
                    for="mx_NotificationSettings2_Keywords_field"
                  >
                    Keyword
                  </label>
                </div>
                <div
                  class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
                  role="button"
                  tabindex="0"
                >
                  Add
                </div>
              </form>
              <div
                class="mx_TagComposer_tags"
                role="list"
              >
                <div
                  class="mx_Tag"
                  role="listitem"
                >
                  justjann3
                  <div
                    aria-label="Remove"
                    class="mx_AccessibleButton mx_Tag_delete"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="mx_Tag"
                  role="listitem"
                >
                  justj4nn3
                  <div
                    aria-label="Remove"
                    class="mx_AccessibleButton mx_Tag_delete"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="mx_Tag"
                  role="listitem"
                >
                  justj4nne
                  <div
                    aria-label="Remove"
                    class="mx_AccessibleButton mx_Tag_delete"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="mx_Tag"
                  role="listitem"
                >
                  Janne
                  <div
                    aria-label="Remove"
                    class="mx_AccessibleButton mx_Tag_delete"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="mx_Tag"
                  role="listitem"
                >
                  J4nne
                  <div
                    aria-label="Remove"
                    class="mx_AccessibleButton mx_Tag_delete"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="mx_Tag"
                  role="listitem"
                >
                  Jann3
                  <div
                    aria-label="Remove"
                    class="mx_AccessibleButton mx_Tag_delete"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="mx_Tag"
                  role="listitem"
                >
                  jann3
                  <div
                    aria-label="Remove"
                    class="mx_AccessibleButton mx_Tag_delete"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="mx_Tag"
                  role="listitem"
                >
                  j4nne
                  <div
                    aria-label="Remove"
                    class="mx_AccessibleButton mx_Tag_delete"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="mx_Tag"
                  role="listitem"
                >
                  janne
                  <div
                    aria-label="Remove"
                    class="mx_AccessibleButton mx_Tag_delete"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mx_SettingsFlag"
            >
              <label
                class="mx_SettingsFlag_label"
                for="mx_SettingsFlag_jWVJIPauy1Om"
              >
                <span
                  class="mx_SettingsFlag_labelText"
                >
                  Show all activity in the room list (dots or number of unread messages)
                </span>
              </label>
              <div
                aria-checked="true"
                aria-disabled="false"
                aria-label="Show all activity in the room list (dots or number of unread messages)"
                class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_on mx_ToggleSwitch_enabled"
                id="mx_SettingsFlag_jWVJIPauy1Om"
                role="switch"
                tabindex="0"
              >
                <div
                  class="mx_ToggleSwitch_ball"
                />
              </div>
            </div>
            <div
              class="mx_SettingsFlag"
            >
              <label
                class="mx_SettingsFlag_label"
                for="mx_SettingsFlag_nTidX4ePDS0O"
              >
                <span
                  class="mx_SettingsFlag_labelText"
                >
                  Only show notifications in the thread activity centre
                </span>
              </label>
              <div
                aria-checked="true"
                aria-disabled="false"
                aria-label="Only show notifications in the thread activity centre"
                class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_on mx_ToggleSwitch_enabled"
                id="mx_SettingsFlag_nTidX4ePDS0O"
                role="switch"
                tabindex="0"
              >
                <div
                  class="mx_ToggleSwitch_ball"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              Email summary
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <div
              class="mx_SettingsSubsection_text"
            >
              Receive an email summary of missed notifications
            </div>
            <div
              class="mx_SettingsSubsection_description mx_NotificationPusherSettings_detail"
            >
              <div
                class="mx_SettingsSubsection_text"
              >
                <span>
                  Select which emails you want to send summaries to. Manage your emails in 
                  <div
                    class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
                    role="button"
                    tabindex="0"
                  >
                    General
                  </div>
                  .
                </span>
              </div>
            </div>
            <div
              class="mx_SettingsIndent"
            >
              <div
                class="mx_LabelledCheckbox"
              >
                <form
                  class="_root_19upo_16"
                >
                  <div
                    class="_inline-field_19upo_32"
                  >
                    <div
                      class="_inline-field-control_19upo_44"
                    >
                      <div
                        class="_container_1hel1_10"
                      >
                        <input
                          class="_input_1hel1_18"
                          id="checkbox_GFes1UFzOK"
                          type="checkbox"
                        />
                        <div
                          class="_ui_1hel1_19"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="_inline-field-body_19upo_38"
                    >
                      <label
                        class="_label_19upo_59"
                        for="checkbox_GFes1UFzOK"
                      >
                        <span
                          class="mx_LabelledCheckbox_label"
                        >
                          test@example.tld
                        </span>
                      </label>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              Notification targets
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <ul>
              <li>
                My EyeFon
              </li>
            </ul>
          </div>
        </div>
        <div
          class="mx_SettingsSubsection"
        >
          <div
            class="mx_SettingsSubsectionHeading"
          >
            <h3
              class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
            >
              Quick Actions
            </h3>
          </div>
          <div
            class="mx_SettingsSubsection_content"
          >
            <div
              class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_outline"
              role="button"
              tabindex="0"
            >
              Reset to default settings
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
